frontend/test/should_pass/map_005.grg
using map_model_002;

rule assignWrongType {
	a:A;
	
	modify {
		eval {
			a.stringToInt = a.stringToInt.remove(a.intValue);
		}
	}
}