frontend/test/should_fail/map_003.grg
using map_model_001;

rule assignWrongType {
	a:A;
	
	modify {
		eval {
			a.stringToInt[5] = a.stringValue;
		}
	}
}